--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>Food TAB RSVP</title>
+  <meta charset="UTF-8">
+  
+
 
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -14,20 +17,21 @@
 
 <div class="instructions">
   <h2> HOW TO PLAY THE GAME </h2>
-  </br>
+  <br>
   <ol>
-        <li>The total cost of your R.S.V.P Catering Experince is between 19-120 dollars.</li>
-        <li>There are four food options below.</li>
-            <li>You want to order the correct of Entrees, Appertizers, and Desserts so it adds up to the TAB.</li>
-            <li>If your order adds up to the exact total tab, you win the round and the meal is on us.</li>
-            <li>If you over order, you lose the game and owe us some cash.</li>
-            <li>The cost of each food item changes each round, each item cost between 1-12 dollars.</li>
-            <li>Check out R.S.V.P catering for more food.</li>
+        <li>1.The total cost of your R.S.V.P Catering Experince is between 19-120 dollars.</li>
+        <li>2.There are four food options below.</li>
+            <li>3.You want to order the correct of Entrees, Appertizers, and Desserts so it adds up to the TAB.</li>
+            <li>4.Add up  the exact total tab, you win the round and the meal is on us.</li>
+            <li>5.If you over order you lose</li>
+            <li>6.The cost of each food item changes each round, each item cost between 1-12 dollars.</li>
+            <li>7.Check out R.S.V.P catering for more food.</li>
   </ol>
 </div>
 <div class="match">
-  <h3> Food TAB COST TO GUESS: <span id= "RNS"></span>
+  <h3>Food TAB COST TO GUESS: <span id="RNS"></span>
   </h3> 
+
 </div>
   <div class="playerbutton">
     <h3>You Total Food Tab is: <span id="PB"></span>
@@ -37,10 +41,10 @@
 
 <div class="winsAndLosses">
   <h4>Wins: 
-      <span id = "numberWins"></span>
-      </br>
+      <span id ="numberWins" ></span>
+      <br>
        Losses:
-        <span id = "numberLosses"></span>
+        <span id ="numberLosses" ></span>
   </h4>
   </div>
   <div class="food">
@@ -49,6 +53,13 @@
     <img src="assets/images/button3.jpg" class=foodimage id="three" alt="food three">
     <img src="assets/images/button4.jpg" class=foodimage id="four" alt="food four">
   </div>
+<!--
+  <video width="320" height="240" controls>
+      <source src="movie.mp4" type="video/mp4">
+      <source src="movie.ogg" type="video/ogg">
+      Your browser does not support the video tag.
+    </video>
+  -->
  
 
     <script
